--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -14,7 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.20" />
+    <PackageReference Include="MySqlConnector" Version="2.1.5" />
   </ItemGroup>
 
   <ItemGroup>
